# vaatsip

./: .gitignore  README.md  Work.txt  package-lock.json  package.json
client/: .env.development  index.html  package-lock.json  package.json  vercel.json  vite.config.js  vite.config.ts
client/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx
client/src/components/: AuthContext.tsx  Content.tsx  Dashboard.tsx  ErrorBoundry.tsx  Home.tsx  Loading.tsx  LoadingSpinner.tsx  Navbar.tsx  OptionBar.tsx  Sidebar.tsx  SignInPage.tsx  chatSection.jsx
client/src/contexts/: AuthContext.tsx  UserDetailsProvider.tsx
client/src/helpers/: socket.js  useStore.js
client/src/hooks/: useMessages.ts  useWebSocket.ts
client/src/models/: Messages.ts
client/src/pages/: AboutUsPage.jsx  AuthPage.tsx  ChatContainer.jsx  ChatPage.jsx  CreateAccount.jsx  Dashboard.tsx  EditProfile.jsx  GetUsers.jsx  HomePage.jsx  NavBar.jsx  OnlineUsersPage.jsx  Page1.jsx  Page2.jsx  ProfileDetailsPage.jsx  ProfileDialog.jsx  ProfilePage.jsx  SignIn.jsx  SignInPage.jsx  SignUp.jsx  TicTacToe.jsx  UsersPage.jsx  UsersProfile.jsx  tstyle.css
client/src/services/: authService.js  socketService.js  useStore.js  userService.js
client/src/types/: global.d.ts
client/src/utils/: get-users.util.ts  useMessages.ts  (+1 more)
rust_server/: Cargo.toml
rust_server/src/: main.rs
server/: .env  .env.development  ;  Workflow.txt  dummy.js  package-lock.json  package.json  private.key  public.key  redner.yaml  render.yaml  server.js  socket.html  socket.js
server/prisma/: schema.prisma
server/src/: server.js
(+47 files in other folders)
