[package]
name = "rust_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
dotenv = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

